# fastapi-auth-example

./: .gitignore  README.md  Taskfile.yaml  pyproject.toml  test.db
api/: database.py  exceptions.py  main.py  models.py
api/crud/: user_crud.py
api/db/: seed.py
api/routers/: auth.py  auth_helper.py  users.py
app/: config.py  database.py  main.py  models.py  schemas.py
app/api/endpoints/: auth.py  auth_helper.py  users.py
app/crud/: user_crud.py
app/db/: create_seed.py
tests/: conftest.py  database.py  helpers.py
tests/api/endpoints/: helpers.py  test_auth_helper.py  test_users.py
tests/crud/: test_user_crud.py
tests/routers/: conftest.py  helpers.py  test_auth.py  test_auth_helper.py  test_users.py
tests/testutils/db/: factories.py  seed.py  test_seed.py
